--- a/book-store/package.json
+++ b/book-store/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~7.0.0",
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "firebase": "^5.6.0",
+    "mongoose": "^5.4.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
